# Magix

./: .env.deploy.example  .gitignore  README.md  docker-compose.deploy.yml  memory
.gitea/workflows/: docker-build-deploy.yml
agno-agent/: Dockerfile  Dockerfile.deps  main.py  pyproject.toml
agno-agent/src/: agents.py  config.py  model_factory.py  server.py  tools.py  validate.py
backend/: Dockerfile  Dockerfile.deps  fix_agent.py  package-lock.json  package.json
backend/src/: agent.ts  agno.ts  encoder.ts  index.ts  renderer.ts  sandbox.ts  store.ts  validator.ts
frontend/: Dockerfile  Dockerfile.deps  next.config.js  next.config.ts  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/api/[...path]/: route.ts
frontend/app/api/outputs/[...path]/: route.ts
frontend/app/timeline/: page.tsx
frontend/app/v1beta/models/[modelAction]/: route.ts
frontend/components/: AssetLibrary.tsx  ChatPanel.tsx  CodeEditor.tsx  CodePreviewPanel.tsx  DebugPanel.tsx  LoginModal.tsx  RenderPanel.tsx  SessionSidebar.tsx  SettingsModal.tsx  TimelinePanel.tsx  VideoTimeline.tsx
frontend/lib/: api.ts  types.ts
