[project]
name = "magiceffect-agno-agent"
version = "0.1.0"
description = "MagicEffect Animation Agent Service powered by Agno"
requires-python = ">=3.11"
dependencies = [
    "agno>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "sse-starlette>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0.0",
]

[tool.ruff]
target-version = "py311"
line-length = 120
